--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             <h1 id="check"> Что нужно обязательно сделать в каникулы: </h1>
             <div>
                 <ul >
-                    <li> Посмотреть "Один дома" </li>
-                    <li> Съесть килограмм мандаринов </li> 
-                    <li> Сходить на прогулку в зимний парк </li> 
-                    <li> Сделать подборку новогодних песен </li> 
-                    <li> Сделать новогоднюю открытку своими руками </li>
+                    <li> пойти погулять с друзьями </li>
+                    <li> Съесть рождественские солаты </li> 
+                    <li> Сходить поиграть в видео огры </li> 
+                    <li> Сделать подборку новогодних видео </li>
                     <li> Повесить кормушку для птиц в парке </li>  
                 </ul> 
             </div>         
@@ -76,9 +75,9 @@
 
 
 
-            <h1 id="adress"> Адреса катков </h1>
+            <h1 id="adress"> Адреса кафе </h1>
             <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d64041.62353688279!2d30.336179742750115!3d59.89395770034724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LrQsNGC0L7Qug!5e0!3m2!1sru!2sru!4v1640674270513!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+            <iframe src="https://www.google.com/maps/search/%D0%B0%D0%B4%D1%80%D0%B5%D1%81%D0%B0+%D0%BA%D0%B0%D1%84%D0%B5/@59.8603465,30.4187359,13z/data=!3m1!4b1" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
         </main>
         <footer>
 
